1.新增邮件任务单个执行方式 2.修改prod数据库连接名，去除118后缀